--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@firebase/firestore": "^3.8.0",
+    "@mui/material": "^5.11.4",
     "axios": "^1.2.2",
     "dotenv": "^16.0.3",
     "firebase": "^9.15.0",
